--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     </div>
   </div>
-  <img src="apple_watch.png"  id="apple-watch"  />
+  <img src="https://i.imgur.com/x4d6gqG.png"  id="apple-watch"  />
   <div class="container">
     <div class="show js-count">
      999
