--- a/index.html
+++ b/index.html
@@ -19,7 +19,29 @@
   <header>
     <a href="#">ゲームへ</a>
   </header>
-  
+  <div class="text-animation">
+    <div class="text-container">
+     <span>R</span>
+     <span>U</span>
+     <span>N</span>
+     <span>N</span>
+     <span>I</span>
+     <span>n</span>
+     <span>G</span>
+     <span>♥</span>
+    </div>
+    <div class="text-container1">
+     <span>G</span>
+     <span>O</span>
+     <span>D</span>
+     <span>S</span>
+     <span>H</span>
+     <span>O</span>
+     <span>S</span>
+     <span>E</span>
+    </div>
+  </div>
+
   <img src="https://i.imgur.com/tyVWdR3.gif"  id="woman" />
   <img src="https://i.imgur.com/tGMYjmu.gif"  id="man" />
   <div class="time">
@@ -39,7 +61,7 @@
 
     </div>
   </div>
-  <img src="https://i.imgur.com/x4d6gqG.png"  id="apple-watch"  />
+  <img src="apple_watch.png"  id="apple-watch"  />
   <div class="container">
     <div class="show js-count">
      999
